--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,9 @@
 	<modules>
 		<module>chapter03</module>
 		<module>chapter04</module>
+		<module>network</module>
+		<module>java-practice01</module>
+		<module>java-practice02</module>
+		<module>java-practice03</module>
 	</modules>
 </project>
